--- a/JS Practice/promise/promise.html
+++ b/JS Practice/promise/promise.html
@@ -6,7 +6,7 @@
     <title>Promise in JS</title>
 </head>
 <body>
-    
+    <h1>Promise in JS</h1>
     <script src="promise.js"></script>
 </body>
 </html>
