--- a/JS Practice/promise/promise.html
+++ b/JS Practice/promise/promise.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Promise in JS</h1>
-    <script src="promise.js"></script>
+    <script src="promiseConsuming.js"></script>
 </body>
 </html>
