--- a/JS Practice/Debugger/index.html
+++ b/JS Practice/Debugger/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promise in JS</title>
+    <title>Debugger</title>
 </head>
 <body>
-    <h1>Promise in JS</h1>
-    <script src="promiseHW.js"></script>
+    <div>
+        <h1>Debugger</h1>
+
+        <script src="index.js"></script>
+    </div>
 </body>
 </html>
